Fix some layout issues in the CSV import screen
- Align headers with the settings below them
- More equally space rows
- Ensure Import button is anchored to the bottom (
caused by e0e807986ba91ee38cf379ec13cc21820d60ca25)

--- a/ts/import-csv/import-csv-base.scss
+++ b/ts/import-csv/import-csv-base.scss
@@ -17,15 +17,16 @@
 body {
     width: min(100vw, 70em);
     margin: 0 auto;
+    height: 100%;
 }
 
 html {
     overflow-x: hidden;
+    height: 100%;
 }
 
 #main {
     padding: 0.5em 0.5em 1em 0.5em;
-    height: 100vh;
 }
 
 // override the default down arrow colour in <select> elements
